--- a/app/assets/styles/modules/_large-hero.css
+++ b/app/assets/styles/modules/_large-hero.css
@@ -1,3 +1,11 @@
-._large-hero{
+.large-hero{
 	position: relative;
+}
+.large-hero__text-area{
+	position: absolute;
+	left: 0;
+	top: 50%;
+	transform:translateY(-50%);
+	width: 100%;
+	text-align: center;
 }
